@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.26 (gritter) 8/3/06";
+	"@(#)/usr/ucb/otfdump.sl	7.27 (gritter) 8/4/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.26 (gritter) 8/3/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.26 (gritter) 8/3/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.27 (gritter) 8/4/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.27 (gritter) 8/4/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.26 (gritter) 8/3/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.27 (gritter) 8/4/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.26 (gritter) 8/3/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.27 (gritter) 8/4/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.26";
+const char revision[] = "7.27";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.66 (gritter) 8/3/06
@@ -24,7 +24,7 @@ hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 n1.c: * Sccsid @(#)n1.c	1.88 (gritter) 7/29/06
 n2.c: * Sccsid @(#)n2.c	1.25 (gritter) 7/30/06
 n3.c: * Sccsid @(#)n3.c	1.121 (gritter) 8/3/06
-n4.c: * Sccsid @(#)n4.c	1.43 (gritter) 8/3/06
+n4.c: * Sccsid @(#)n4.c	1.44 (gritter) 8/4/06
 n5.c: * Sccsid @(#)n5.c	1.65 (gritter) 8/3/06
 n7.c: * Sccsid @(#)n7.c	1.80 (gritter) 7/30/06
 n8.c: * Sccsid @(#)n8.c	1.31 (gritter) 7/29/06
